Fix tests flags and some configs

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,10 +18,11 @@ function(add_test_executable TEST_NAME)
     if(CMAKE_CXX_COMPILER_ID MATCHES "GNU") 
         set_target_properties(${TEST_NAME} PROPERTIES COMPILE_FLAGS -pthread LINK_FLAGS -pthread)
     endif()
+    separate_arguments(MIOPEN_TEST_FLAGS_ARGS UNIX_COMMAND ${MIOPEN_TEST_FLAGS})
     if(MIOPEN_TEST_ALL)
-        set(TEST_COMMAND $<TARGET_FILE:${TEST_NAME}> --all ${MIOPEN_TEST_FLAGS})
+        set(TEST_COMMAND $<TARGET_FILE:${TEST_NAME}> --all ${MIOPEN_TEST_FLAGS_ARGS})
     else()
-        set(TEST_COMMAND $<TARGET_FILE:${TEST_NAME}> ${MIOPEN_TEST_FLAGS})
+        set(TEST_COMMAND $<TARGET_FILE:${TEST_NAME}> ${MIOPEN_TEST_FLAGS_ARGS})
     endif()
     add_test(NAME ${TEST_NAME} COMMAND ${WINE_CMD} ${TEST_COMMAND})
     add_dependencies(tests ${TEST_NAME})
