--- a/include/miopen/version.h.in
+++ b/include/miopen/version.h.in
@@ -1,6 +1,12 @@
 /* the configured version and settings for miopen
  *  */
+
+#ifndef MIOPEN_VERSION_H_
+#define MIOPEN_VERSION_H_
+
 #define MIOPEN_VERSION_MAJOR @MIOpen_VERSION_MAJOR@
 #define MIOPEN_VERSION_MINOR @MIOpen_VERSION_MINOR@
 #define MIOPEN_VERSION_PATCH @MIOpen_VERSION_PATCH@
 #define MIOPEN_VERSION_TWEAK @MIOpen_VERSION_TWEAK@
+
+#endif
