Added batch_norm.cpp to move derive tensor function into the C++ space. Added a lot of printfs for debug purposes into all spatial kernels for larger multigroup reductions. This is intended to reveal the location of the memory faults (excluded gidx stores to buffers will add this next). Resctivated the larger spatial tests in network_data.cpp.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,6 +39,7 @@ set( MIOpen_Source
 	activ_api.cpp
 	handle_api.cpp
 	softmax_api.cpp
+        batch_norm.cpp
 	batch_norm_api.cpp
 	include/miopen/batch_norm.hpp
 	include/miopen/common.hpp
