Link hcc privately

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -196,7 +196,7 @@ if( MIOPEN_BACKEND STREQUAL "OpenCL")
 	target_link_libraries( MIOpen PUBLIC ${OPENCL_LIBRARIES} )
 	set(BACKEND_PACKAGE "OpenCL")
 elseif(MIOPEN_BACKEND STREQUAL "HIPOC" OR MIOPEN_BACKEND STREQUAL "HIP")
-	target_link_libraries( MIOpen PRIVATE ${hip_LIBRARIES} )
+	target_link_libraries( MIOpen PRIVATE hip::hip_hcc ${hcc_LIBRARIES} )
 	target_link_libraries( MIOpen INTERFACE hip::hip_hcc )
 	# This is helpful for the tests
 	target_link_libraries( MIOpen INTERFACE $<BUILD_INTERFACE:${hip_LIBRARIES}> )
