asm for conv 5x10 backward data with stride=2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -94,6 +94,7 @@ if( MIOPEN_BACKEND MATCHES "OpenCL" OR MIOPEN_BACKEND STREQUAL "HIPOC" OR MIOPEN
         Kernels/conv3x3.s
         Kernels/conv3x3wrw.s
         Kernels/conv5x10u2v2f1.s
+        Kernels/conv5x10u2v2b1.s
         Kernels/MIOpenTensorKernels.cl
         Kernels/MIOpenTensorScaleKernel.cl
         Kernels/conv_3x3_wheel_alpha_v5_1_1b_gfx900.so
