Integrated gcn asm direct 7x7u2v2 conv kernel [H=224 W=224 C=3 K=64 p=3 q=3].

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -97,6 +97,7 @@ if( MIOPEN_BACKEND MATCHES "OpenCL" OR MIOPEN_BACKEND STREQUAL "HIPOC" OR MIOPEN
         Kernels/conv3x3wrw.s
         Kernels/conv5x10u2v2f1.s
         Kernels/conv5x10u2v2b1.s
+        Kernels/conv7x7c3h224w224k64u2v2p3q3f1.s
         Kernels/MIOpenTensorKernels.cl
         Kernels/MIOpenTensorScaleKernel.cl
         Kernels/conv_3x3_wheel_alpha_v7_0_3b_gfx900.so
