--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -6,6 +6,4 @@ add_executable(MIOpenDriver EXCLUDE_FROM_ALL main.cpp InputFlags.cpp)
 target_link_libraries(MIOpenDriver MIOpen)
 install(TARGETS MIOpenDriver 
     OPTIONAL 
-    RUNTIME DESTINATION ${BIN_INSTALL_DIR}
-    LIBRARY DESTINATION ${LIB_INSTALL_DIR}
-    ARCHIVE DESTINATION ${LIB_INSTALL_DIR})
+    RUNTIME DESTINATION bin)
