--- a/src/miopen-config.cmake.in
+++ b/src/miopen-config.cmake.in
@@ -44,7 +44,7 @@ set_and_check( miopen_INCLUDE_DIRS "${miopen_INCLUDE_DIR}" )
 set_and_check( miopen_LIB_INSTALL_DIR "@PACKAGE_LIB_INSTALL_DIR@" )
 
 find_dependency(@BACKEND_PACKAGE@)
-find_dependency(tinygemm)
+find_dependency(MIOpenGEMM)
 
 include( "${CMAKE_CURRENT_LIST_DIR}/miopen-targets.cmake" )
 
