--- a/include/miopen/config.h.in
+++ b/include/miopen/config.h.in
@@ -4,7 +4,7 @@
 #cmakedefine01 MIOPEN_BACKEND_OPENCL
 #cmakedefine01 MIOPEN_BACKEND_HCC
 #cmakedefine01 MIOPEN_BACKEND_HIP
-#cmakedefine01 MIOPEN_USE_TINYGEMM
+#cmakedefine01 MIOPEN_USE_MIOPENGEMM
 #cmakedefine01 MIOPEN_BUILD_DEV
 
 #cmakedefine MIOPEN_AMDGCN_ASSEMBLER "@MIOPEN_AMDGCN_ASSEMBLER@"
