Added all entries for all functions and enums inmiopen.h to sphinx rst files.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -13,6 +13,12 @@ add_doxygen_doc(
     MACRO_EXPANSION YES
     RECURSIVE YES
     GENERATE_XML YES
+    GENERATE_LATEX YES
+    OPTIMIZE_OUTPUT_FOR_C YES
+    AUTOLINK_SUPPORT YES
+    SHOW_INCLUDE_FILES YES
+    SHOW_FILES YES
+
 )
 add_sphinx_doc(src 
     BUILDER html 
