--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,7 +112,7 @@ if( MIOPEN_BACKEND STREQUAL "HIP" OR MIOPEN_BACKEND STREQUAL "HIPOC")
     find_package(hip REQUIRED PATHS /opt/rocm)
     link_libraries(stdc++)
     # A hack to make this work without the device enumerator
-    link_libraries(-amdgpu-target=gfx803 -Wno-unused-command-line-argument)
+    link_libraries(-amdgpu-target=gfx803 -amdgpu-target=gfx900 -Wno-unused-command-line-argument)
 endif()
 message( STATUS "${MIOPEN_BACKEND} backend selected." )
 
