Customize cache directory

--- a/include/miopen/config.h.in
+++ b/include/miopen/config.h.in
@@ -34,5 +34,6 @@
 
 #cmakedefine MIOPEN_AMDGCN_ASSEMBLER "@MIOPEN_AMDGCN_ASSEMBLER@"
 #cmakedefine HIP_OC_COMPILER "@HIP_OC_COMPILER@"
+#cmakedefine MIOPEN_CACHE_DIR "@MIOPEN_CACHE_DIR@"
 
 #endif
