Add support for perstitence cache in hip

--- a/include/miopen/version.h.in
+++ b/include/miopen/version.h.in
@@ -30,9 +30,11 @@
 #ifndef MIOPEN_VERSION_H_
 #define MIOPEN_VERSION_H_
 
-#define MIOPEN_VERSION_MAJOR @MIOpen_VERSION_MAJOR @
-#define MIOPEN_VERSION_MINOR @MIOpen_VERSION_MINOR @
-#define MIOPEN_VERSION_PATCH @MIOpen_VERSION_PATCH @
-#define MIOPEN_VERSION_TWEAK @MIOpen_VERSION_TWEAK @
+// clang-format off
+#define MIOPEN_VERSION_MAJOR @MIOpen_VERSION_MAJOR@
+#define MIOPEN_VERSION_MINOR @MIOpen_VERSION_MINOR@
+#define MIOPEN_VERSION_PATCH @MIOpen_VERSION_PATCH@
+#define MIOPEN_VERSION_TWEAK @MIOpen_VERSION_TWEAK@
+// clang-format on
 
 #endif
