--- a/include/miopen/config.h.in
+++ b/include/miopen/config.h.in
@@ -36,4 +36,6 @@
 #cmakedefine HIP_OC_COMPILER "@HIP_OC_COMPILER@"
 #cmakedefine MIOPEN_CACHE_DIR "@MIOPEN_CACHE_DIR@"
 
+#cmakedefine01 MIOPEN_USE_CACHE
+
 #endif
