--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -77,7 +77,7 @@ set( MIOpen_Source
     include/miopen/errors.hpp
     include/miopen/handle.hpp
     include/miopen/kernel_cache.hpp
-	include/miopen/algorithm_implementations.hpp
+	include/miopen/solver.hpp
     include/miopen/mlo_internal.hpp
     include/miopen/mlo_utils.hpp
     include/miopen/oclkernel.hpp
